<resources>

    <string name="app_name">CMPUT301F12T02</string>
    <!-- Main Menu -->
    <string name="title_activity_main">CMPUT301F12T02</string>
    <string name="viewstored_button">View Stored Tasks</string>
    <string name="newrequest_button">New Task Request</string>
    
    <!-- Create New Request -->
    
    <string name="title_activity_new_request">New Task Request</string>
    <string name="task_description">Description of Task</string>
    <string name="user_email">Email that task will be sent to upon completion</string>
    <string name="require_photos">Requires photo(s)</string>
    <string name="require_audio">Requires audio</string>
    <string name="createrequest_button">Create</string>
    
    <!-- Summary of Request -->
    
    <string name="title_activity_request_summary">Request Summary</string>
    <string name="requestsummary">Description of Task&#8230;</string>
    <string name="savelocal_button">Save as My Task</string>
    <string name="post_button">Post to Community</string>
    
    <!-- Show Stored Tasks -->
    
    <string name="title_activity_stored_tasks">Stored Tasks</string>
    <string name="other_requests">Task Requests From Others</string>
    <string name="my_tasks">My Tasks</string>
    <string name="my_favourites">My Favourite Tasks</string>
    <string name="my_drafts">My Drafts</string>
    <string name="com_button">COMMUNITY</string>
    <string name="local_button">LOCAL</string>
    <string name="drafts_button">DRAFTS</string>
    <string name="favourites_button">FAVOURITES</string>
    <string name="empty_list">No tasks found.</string>
    <string name="title_activity_com_task">Community Tasks</string>
    <string name="title_activity_local_task">Local Tasks</string>
    <string name="random_tasks">Display Random Task</string>
    <string name="button_random">RANDOM</string>
    
    <!-- Create Task to fulfill Request -->
    
    <string name="title_activity_fulfill_task">Fulfill Task Request</string>
    <string name="task_text">Enter text here.</string>
    <string name="like_text">Like</string>
    <string name="get_image">Take Photo(s)</string>
    <string name="taskdone">Done</string>
    <string name="save_progress">Save Progress</string>
    <string name="add_to_favourites">Add To Favourites</string>
    <string name="remove_from_favourites">Remove From Favourites</string>
    <string name="remove_task">Remove Task</string>
    <!-- Filfill Non-text Requirements -->
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <!-- Record Audio -->
    <!-- Take Photo(s) -->
    <string name="title_activity_take_photo">Take a Photo</string>
    <string name="TakeAPhoto">Camera</string>
    <string name="camera_status"></string>
    <string name="finish_button">Done</string>

</resources>