<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/storetaskParentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/other_requests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/other_requests" />
	<Button
	    android:id="@+id/com_button"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/com_button" />

    <TextView
        android:id="@+id/my_tasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_tasks" />
    <Button
        android:id="@+id/local_button"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        android:text="@string/local_button" />
    
    <TextView
        android:id="@+id/my_favourites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_favourites" />
    <Button
        android:id="@+id/favourites_button"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        android:text="@string/favourites_button" />
    
    <TextView
        android:id="@+id/my_drafts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_drafts" />
    <Button
        android:id="@+id/drafts_button"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        android:text="@string/drafts_button" />
    
    <TextView
        android:id="@+id/text_random"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/random_tasks" />
    <Button
        android:id="@+id/random_button"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        android:text="@string/button_random" />

</LinearLayout>