<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/task_description"
        android:layout_weight="4"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:hint="@string/task_description" />
    
    <EditText
        android:id="@+id/user_email"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:hint="@string/user_email"
        android:inputType="textEmailAddress" />
    
    <CheckBox
        android:id="@+id/require_photos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/require_photos" />
	<CheckBox
	    android:id="@+id/require_audio"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:text="@string/require_audio" />
	<Button
        android:id="@+id/createrequest_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createrequest_button" />
</LinearLayout>