<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageButton
        android:id="@+id/TakeAPhoto"
        android:layout_width="fill_parent"
        android:layout_height= "0dip"
        android:layout_weight="0.75"
        android:contentDescription="@string/TakeAPhoto"
        android:src="@drawable/ic_action_search" />

    <Button
        android:id="@+id/finishButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish_button" />

    <TextView
        android:id="@+id/camera_status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera_status" />

</LinearLayout>
