<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/requestsummary"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:text="@string/requestsummary" />"
	<Button
        android:id="@+id/savelocal_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/savelocal_button" />
    <Button
        android:id="@+id/post_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_button" />
    
</LinearLayout>